--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "0.0.1",
   "scripts": {
     "dev": "astro dev",
+    "server": "bun run src/api/server.ts",
     "start": "concurrently \"bun astro dev\" \"bun run src/api/server.ts\"",
     "build": "astro check && astro build",
     "preview": "astro preview",
@@ -19,7 +20,7 @@
     "@types/cookie": "^0.6.0",
     "@types/dotenv": "^8.2.0",
     "@types/jsonwebtoken": "^9.0.6",
-    "@types/react": "^18.3.5",
+    "@types/react": "^18.3.10",
     "@types/react-dom": "^18.3.0",
     "@types/tailwindcss": "^3.1.0",
     "astro": "^4.15.4",
@@ -32,6 +33,7 @@
     "mysql2": "^3.11.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-router-dom": "^6.26.2",
     "tailwind": "^4.0.0",
     "tailwindcss": "^3.4.11",
     "typescript": "^5.6.2"
